# MoonMcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: BENCHMARK.md  CORE_AUDIT.md  DATABASE_RESEARCH.md  INJECTIONS.md  NUCLEI_COVERAGE.md  OBSIDIAN.md  PRIVESC.md  PROJECT_AUDIT.md  RESEARCH.md  RESEARCH_AGENDA.md  RESEARCH_GAPS.md  ROADMAP.md  ROOT_CAUSES.md  SERVER_SIDE_VULNS.md  SPRINGBOOT_RESEARCH.md  SSRF_HARDENING.md  STRIX_INTEGRATION.md  SYSTEM_PROMPTS.md  TECHNIQUES.md  WAF.md
examples/: claude_desktop_config.json
examples/strix_mcp/: server.py
moonmcp/: __init__.py  __main__.py  audit.py  auth.py  bench.py  catalog.py  config.py  confirm.py  context.py  cvss.py  dryrun.py  errors.py  findings.py  intercept.py  leadpipe.py  lessons.py  live.py  memory.py  metrics.py  monitor.py  nextstep.py  obsidian.py  pin.py  planner.py  programs.py  prompts.py  reporting.py  scope.py  server.py  shape.py  toolsearch.py
moonmcp/intel/: __init__.py  asn.py  cve.py  cverisk.py  email.py  oast.py  oast_server.py  reader.py  search.py  shodan.py
moonmcp/knowledge/: __init__.py  injections.py  injections_data.py  privesc.py  privesc_data.py  techniques.py  techniques_data.py  vulns.py  vulns_data.py  (+2 more)
tests/: conftest.py  test_active_tool_guard.py  test_actuator.py  test_appliance.py  test_audit.py  test_auth.py  test_authflow.py  test_authz.py  test_batch_export.py  test_benchmark.py  test_binary.py  test_bitrix.py  test_browser.py  test_buckets.py  test_bug_fixes.py  test_bugfixes.py  test_cache_deception.py  test_cachepoison.py  test_catalog.py  test_cloud_db_exposure.py  test_cmdi.py  test_config_audit.py  test_confirm_cvss.py  test_content.py  test_crlf.py  test_csp.py  test_cspp.py  test_cverisk.py  test_datastores.py  test_debugpanel.py  test_depconf.py  test_deserialize.py  test_desync_modern.py  test_docmeta.py  test_dryrun.py  test_errors.py  test_eval_detectors.py  test_external_tools.py  test_fastjson.py  test_findings_desync.py  (+80 more)
(+94 files in other folders)
