[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moonmcp"
version = "0.1.0"
description = "MoonMCP — a scope-aware bug-bounty & reconnaissance MCP server that works out of the box on the Python standard library and augments itself with your favourite CLI tools when present."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MoonMCP" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "bug-bounty",
    "reconnaissance",
    "recon",
    "security",
    "osint",
    "pentest",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
]
# The whole point of MoonMCP is to work with (almost) zero dependencies.
# The only hard requirement is the MCP SDK itself.
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
# Nice-to-haves that improve accuracy but are never required — every module
# has a pure-stdlib fallback when these are missing.
enhanced = [
    "dnspython>=2.4",
]
# Enables the `screenshot` tool and the headless-browser tools (`browser_open`,
# `browser_eval`). Chromium still needs `playwright install chromium`.
screenshots = [
    "playwright>=1.40",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
moonmcp = "moonmcp.__main__:main"

[project.urls]
Homepage = "https://github.com/Moonwuk/MoonMcp"
Repository = "https://github.com/Moonwuk/MoonMcp"

[tool.hatch.build.targets.wheel]
packages = ["moonmcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
